# gegl

./: .travis.yml  configure.ac
examples/: Makefile.am
gegl/: Makefile.am  gegl-config.c  gegl-config.h  gegl-init.c
gegl/buffer/: Makefile.am  gegl-buffer-access.c  gegl-buffer-iterator.c  gegl-buffer-iterator.h  gegl-buffer-linear.c  gegl-buffer-load.c  gegl-buffer-save.c  gegl-buffer.c  gegl-buffer.h  gegl-tile-backend-file.c  gegl-tile-backend-ram.c  gegl-tile-backend-tiledir.c  gegl-tile-handler-empty.c  gegl-tile-handler-zoom.c  gegl-tile.c  gegl-tile.h
gegl/gpu/: Makefile.am  gegl-gpu-init.c  gegl-gpu-init.h  gegl-gpu-texture.c  gegl-gpu-texture.h  gegl-gpu-types.h
gegl/graph/: Makefile.am
gegl/module/: Makefile.am
gegl/operation/: Makefile.am  gegl-operation-point-composer.c  gegl-operation-point-composer3.c  gegl-operation-point-filter.c  gegl-operation-point-filter.h  gegl-operation-point-render.c  gegl-operation-processors.c  gegl-operation.h
gegl/process/: Makefile.am
gegl/property-types/: Makefile.am  gegl-color.c
operations/: Makefile-common.am
operations/affine/: affine.c
operations/common/: Makefile.am  brightness-contrast.c  checkerboard.c  invert.c  levels.c
operations/workshop/: normalize.c
tests/: .gitignore  Makefile.am  test-gegl-buffer-gpu-scale-normal.c  test-gegl-gpu-texture-clear-subrect.c  test-gegl-gpu-texture-clear.c  test-gegl-gpu-texture-copy-subrect.c  test-gegl-gpu-texture-copy.c  test-gegl-gpu-texture-dup.c  test-gegl-gpu-texture-set-subrect.c  test-gegl-gpu-texture-set.c  test-gegl-tile-cow-consistency.c  test-gegl-tile-cow.c  test-gegl-tile-lock-mode-gpu-write-then-gpu-read.c  test-gegl-tile-lock-mode-gpu-write-then-read.c  test-gegl-tile-lock-mode-write-then-gpu-read.c  test-gegl-tile-lock-mode-write-then-read.c
tests/buffer/: Makefile.am  buffer-test.c
tests/compositions/: Makefile.am  png-load-http-uri.xml  png-load-path.xml  png-load-uri.xml
tests/gjs/: Makefile.am  test-gegl.js
tests/simple/: .gitignore
tools/: Makefile.am  csourcetostring.py
